--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Chandra Sekhar</title>
   </head>
   <body>
     <div id="root"></div>
